tests/script_runtime_errors/arr_bad_idx/error.txt
Error: 
    1 | event[42]
      |       ^^ Trying to access an index that is out of range 42
